--- a/fun_coding/codility/7_StoneWall(Stack and Queues).ipynb
+++ b/fun_coding/codility/7_StoneWall(Stack and Queues).ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,6 +36,7 @@
     "            elif data == last:\n",
     "                count -= 1\n",
     "            stack.append(data)\n",
+    "        print(stack)\n",
     "            \n",
     "    return count\n",
     "    "
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,13 +53,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[8]\n",
+      "[8]\n",
+      "[5]\n",
+      "[5, 7]\n",
+      "[5, 7, 9]\n",
+      "[5, 7, 8]\n",
+      "[5, 7]\n",
+      "[4]\n",
       "[4, 8]\n"
      ]
     },
@@ -68,7 +77,7 @@
        "7"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
